# Macchiato

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  justfile
benchmarks/: README.md
cmake/: Compile.cmake  Dependencies.cmake  StandardProjectSettings.cmake
licenses/: Espresso.txt
src/: CMakeLists.txt  bitset_test.cc
src/include/macchiato/: base.h  bitset.h
